--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,19 +5,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-radius: 0;
-    margin: 0;
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
+    position: sticky;
     z-index: 1000;
 }
 
 .navbar {
     display: flex;
     justify-content: center;
-    width: 100%;
 }
 
 .navbar ul {
