--- a/src/components/Leadingpage.css
+++ b/src/components/Leadingpage.css
@@ -1,37 +1,37 @@
 .page-container {
-    min-height: 100vh;
-    width: 100%;
-    height: 100vh;
-    background-image: url('src/imagenes/fondo.jpg'); 
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-top: 90px; 
-    box-sizing: border-box;
-    position: relative;
-  }
-  
-  /* Asegura que el encabezado esté por encima del fondo */
-  header {
-    position: relative;
-    z-index: 10;
-    width: 100%;
-  }
-  
-  /* Estilo para los textos */
-  h2 {
-    color: #000c74;
-    font-size: 36px;
-    margin-bottom: 20px;
-  }
-  
-  p {
-    color: #001368;
-    font-size: 18px;
-    text-align: center;
-    max-width: 600px;
-  }
+  min-height: calc(100vh - 76px);
+  background-image: url('src/imagenes/fondo.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  filter: blur(5px);
+}
+
+/* Estilo para los textos */
+h2 {
+  color: #000c74;
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+
+p {
+  color: #001368;
+  font-size: 18px;
+  text-align: center;
+  max-width: 600px;
+}
+
+.title-leanding {
+  position: absolute;
+  padding: 0 40px;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  flex-direction: column;
+}
