--- a/src/components/MisAventuras.css
+++ b/src/components/MisAventuras.css
@@ -2,13 +2,11 @@
   .form-container {
     background-color: #ffffff;
     padding: 20px;
-    top: 90px;
     border-radius: 12px;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
     max-width: 800px;
-    width: 100%;
-    box-sizing: border-box;
-    position: relative; 
+    margin: 0 auto;
+    margin-top: 20px;
 }
 
   
